# trollsavar

./: .envrc  README.md  pyproject.toml
.github/workflows/: update-blacklists.yml
blacklists/: did:plc:uhskmk3ii3bni2zx2cnu47oo  did:plc:xpizcavq7g3xodugidqm5hv2  did:plc:zxv3ksxn7hbv45isb5situiz
trollsavar/: image.py  main.py
